fixed text-alignment on stats to be more responsive

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header {
   font-family: gameOfThrones;
   color: black;
   font-size: 350%;
-  padding-top: 1%;
+  padding-top: 0.5%;
 }
 main {
   height: 90vh;
@@ -162,11 +162,18 @@ transition: .8s ease;
   height: 12%;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   text-shadow: 2px 2px silver;
 }
 .bottomContainer {
-  width: 37%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  width: 34%;
   text-align: center;
   font-size: 100%;
   font-family: gameOfThrones;
@@ -179,23 +186,33 @@ transition: .8s ease;
 .statsWrapper {
   background-color: #9b1c31;
   background-image: url("./assets/stats.png");
+  /* height: 90%; */
 }
 .statsContainer {
-  height: 33%;
+  border: 1px solid white;
+  /* height: 33%; */
 }
 .stats {
-  display: inline-block;
-  position: relative;
-  top: 5%;
+  border: 1px solid black;
+  margin: auto;
+  /* height: 100%; */
+  /* border: 1px solid black; */
+  /* display: inline-block; */
+  /* position: relative; */
+  /* text-align: center; */
+  /* line-height: 10%; */
+  /* top: 5%; */
 }
 #gamesPlayed, #attempts, #accuracy {
   display: inline-block;
   font-size: 150%
 }
 .gifContainer {
-  width: 10%;
+  height: 100%;
+  border: 1px solid black;
+  width: 8%;
   border-radius: 15px;
-  margin: 0% 2%;
+  /* margin: 0% 2%; */
 }
 .gifSize {
   height: 100%;
@@ -203,19 +220,24 @@ transition: .8s ease;
   border-radius: 15px;
 }
 .quotesContainer {
+  border: 1px solid black;
   background-color: #04195b;
   background-image: url("./assets/quotes.png");
+  /* height: 90%; */
+}
+#quotes, #author {
+  border: 1px solid black;
 }
 #quotes {
-  margin-bottom: 2%;
+  /* margin-bottom: 2%; */
 }
 .singleLineQuotes {
-  position: relative;
-  top: 28%;
+  /* position: relative; */
+  /* top: 28%; */
 }
 .doubleLineQuotes {
-  position: relative;
-  top: 14%;
+  /* position: relative; */
+  /* top: 14%; */
 }
 
  /* ----------- Thinkpad x250 ----------- */
